--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -1,260 +1,110 @@
-html {
-  line-height: 1.15;
-  -ms-text-size-adjust: 100%;
-  -webkit-text-size-adjust: 100%;
-}
-body {
-  margin: 0;
-}
-article,
-aside,
-footer,
-header,
-nav,
-section {
-  display: block;
-}
-h1 {
-  font-size: 2em;
-  margin: 0.67em 0;
-}
-figcaption,
-figure,
-main {
-  display: block;
-}
-figure {
-  margin: 1em 40px;
-}
-hr {
-  box-sizing: content-box;
-  height: 0;
-  overflow: visible;
-}
-pre {
-  font-family: monospace, monospace;
-  font-size: 1em;
-}
-a {
-  background-color: transparent;
-  -webkit-text-decoration-skip: objects;
-}
-abbr[title] {
-  border-bottom: none;
-  text-decoration: underline;
-  text-decoration: underline dotted;
-}
-b,
-strong {
-  font-weight: inherit;
-}
-b,
-strong {
-  font-weight: bolder;
-}
-code,
-kbd,
-samp {
-  font-family: monospace, monospace;
-  font-size: 1em;
-}
-dfn {
-  font-style: italic;
-}
-mark {
-  background-color: #ff0;
-  color: #000;
-}
-small {
-  font-size: 80%;
-}
-sub,
-sup {
-  font-size: 75%;
-  line-height: 0;
-  position: relative;
-  vertical-align: baseline;
-}
-sub {
-  bottom: -0.25em;
-}
-sup {
-  top: -0.5em;
-}
-audio,
-video {
-  display: inline-block;
-}
-audio:not([controls]) {
-  display: none;
-  height: 0;
-}
-img {
-  border-style: none;
-}
-svg:not(:root) {
-  overflow: hidden;
-}
-button,
-input,
-optgroup,
-select,
-textarea {
-  font-family: sans-serif;
-  font-size: 100%;
-  line-height: 1.15;
-  margin: 0;
-}
-button,
-input {
-  overflow: visible;
-}
-button,
-select {
-  text-transform: none;
-}
-button,
-html [type='button'],
-[type='reset'],
-[type='submit'] {
-  -webkit-appearance: button;
-}
-button::-moz-focus-inner,
-[type='button']::-moz-focus-inner,
-[type='reset']::-moz-focus-inner,
-[type='submit']::-moz-focus-inner {
-  border-style: none;
-  padding: 0;
-}
-button:-moz-focusring,
-[type='button']:-moz-focusring,
-[type='reset']:-moz-focusring,
-[type='submit']:-moz-focusring {
-  outline: 1px dotted ButtonText;
-}
-fieldset {
-  padding: 0.35em 0.75em 0.625em;
-}
-legend {
-  box-sizing: border-box;
-  color: inherit;
-  display: table;
-  max-width: 100%;
-  padding: 0;
-  white-space: normal;
-}
-progress {
-  display: inline-block;
-  vertical-align: baseline;
-}
-textarea {
-  overflow: auto;
-}
-[type='checkbox'],
-[type='radio'] {
-  box-sizing: border-box;
-  padding: 0;
-}
-[type='number']::-webkit-inner-spin-button,
-[type='number']::-webkit-outer-spin-button {
-  height: auto;
-}
-[type='search'] {
-  -webkit-appearance: textfield;
-  outline-offset: -2px;
-}
-[type='search']::-webkit-search-cancel-button,
-[type='search']::-webkit-search-decoration {
-  -webkit-appearance: none;
-}
-::-webkit-file-upload-button {
-  -webkit-appearance: button;
-  font: inherit;
-}
-details,
-menu {
-  display: block;
-}
-summary {
-  display: list-item;
-}
-canvas {
-  display: inline-block;
-}
-template {
-  display: none;
-}
-[hidden] {
-  display: none;
-}
-
-.clearfix:after {
-  visibility: hidden;
-  display: block;
-  font-size: 0;
-  content: '';
-  clear: both;
-  height: 0;
-}
-
-html {
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-}
-
-*,
-*:before,
-*:after {
-  box-sizing: inherit;
-}
-
-.sr-only {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  border: 0;
-  padding: 0;
-  white-space: nowrap;
-  clip-path: inset(100%);
-  clip: rect(0 0 0 0);
-  overflow: hidden;
-}
-
 // Google fonts
 @import url('https://fonts.googleapis.com/css2?family=Barlow&family=Merienda&display=swap');
 
 // Variables
-$primaryColor: #afedff;
-$secondaryColor: #ffb0c6;
-$tertiaryColor: #9bd694;
+$primaryColor: #fff;
+$secondaryColor: #afedff;
+$tertiaryColor: #ffb0c6;
+$quaternaryColor: #9bd694;
+$quinaryColor: #000;
 
 // Fonts
 $primaryFont: 'Barlow', sans-serif;
 $secondaryFont: 'Merienda', cursive;
 
-// Mixin
+// Mixins
 @mixin center {
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
+a {
+  text-decoration: none;
+  color: $primaryColor;
+}
+
 body {
   font-family: $primaryFont;
+  color: $primaryColor;
+  background: $secondaryColor;
+  text-align: center;
+  min-height: 100vh;
+  max-width: 100vw;
 }
 
 header {
   @include center;
-  height: 100px;
+  height: 30vh;
+  img {
+    max-height: 200vh;
+    border-style: none;
+    width: 30%;
+  }
 }
 
-main {
+.centered {
   @include center;
-  min-height: calc(100vh - 100px);
+  flex-direction: column;
+  max-width: 100vw;
 }
 
-.button {
+button {
   margin: 50px;
+}
+
+input {
+  border-radius: 5px;
+  box-shadow: none;
+  font-size: 25px;
+}
+
+label {
+  font-family: $secondaryFont;
+  color: $quinaryColor;
+  font-size: 1.5rem;
+}
+
+/* BUTTON STYLING IDEA TAKEN FROM  https://codepen.io/fossheim/pen/RwPeVKG*/
+button {
+  display: block;
+  cursor: pointer;
+  outline: none;
+  border: none;
+  background-color: $tertiaryColor;
+  width: 400px;
+  min-height: 70px;
+  border-radius: 30px;
+  font-size: 1.5rem;
+  font-weight: 600;
+  background-size: 100% 100%;
+  box-shadow: 0 0 0 7px $tertiaryColor inset;
+  margin-bottom: 15px;
+  margin-top: 15px;
+}
+
+button:hover {
+  background-image: linear-gradient(
+    145deg,
+    transparent 10%,
+    $quaternaryColor 10% 20%,
+    transparent 20% 30%,
+    $quaternaryColor 30% 40%,
+    transparent 40% 50%,
+    $quaternaryColor 50% 60%,
+    transparent 60% 70%,
+    $quaternaryColor 70% 80%,
+    transparent 80% 90%,
+    $quaternaryColor 90% 100%
+  );
+  animation: background 3s linear infinite;
+}
+
+@keyframes background {
+  0% {
+    background-position: 0 0;
+  }
+  100% {
+    background-position: 400px 0;
+  }
 }
